# Nanogram

./: com.github.labomoose.nanogram.yml  meson.build
data/: nanogram.appdata.xml  nanogram.desktop.in
po/: LINGUAS  POTFILES  com.github.labomoose.nanogram.pot  cz.po  en.po  meson.build
src/: NanogramApplication.vala
